feat: 상세 검색/필터링 및 스터디 추천 로직 고도화
[백엔드]
- 상세 검색 기능 구현: 지역, 분야, 온/오프라인, 모집 상태 필터링 추가 (Controller, Service)
- 추천 알고리즘 개선: TF-IDF 및 코사인 유사도를 적용하여 목표(Goal) 기반 매칭률 정확도 향상 (RecommendationService)
- 테스트 데이터 추가: 다양한 사용자 및 스터디 샘플 데이터 구성 (data.sql, 한글화 적용)
- 코드 정리: 미사용 코드 제거 및 리팩토링

[프론트엔드]
- 검색 결과 페이지: 필터링 UI (지역 선택, 분야 입력 등) 추가 및 실시간 검색 연동
- API 연동: 필터 파라미터 전달 로직 추가